# gh-classroom-canvas

./: README.md  pyproject.toml
ghcr_canvas/: cli.py  merger.py  renamer.py
